fix copy button for dark mode

--- a/static/main.css
+++ b/static/main.css
@@ -95,6 +95,11 @@ body {
 }
 
 
+.dark * .button-copy {
+    outline-color: var(--lighter2-color);
+}
+
+
 #logo>img {
     max-width: 130px;
 
